# pysbatch

./: .gitignore  .venv  Spoll_sample_conf.toml  pyproject.toml  pysbatch.nix
pysbatch/: dumbdata.py  execs.py
pysbatch-ng/: config.py
pysbatch_ng/: __init__.py  config.py  dumbdata.py  execs.py  info.py  platform.py  polling.py  sbatch.py  spoll.py  utils.py
pysbatch_ng/constants/: __init__.py  execs.py  fields.py  files.py
tests/: test_info.py
