[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysbatch"
version = "0.0.4"
authors = [{ name = "Egor Perevoshchikov", email = "abkein@abkein.ru" }]
description = "A package for continiously running LAMMPS on HPC systems with SLURM workload manager, where execution time is limited"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = ['toml', 'marshmallow', 'paramiko']

[project.scripts]
spoll = "pysbatch.spoll:main"
spolld = "pysbatch.polling:main"
pysbatch = "pysbatch.sbatch:main"

[project.urls]
"Homepage" = "https://github.com/Architect0rr/MDDPN"
"Bug Tracker" = "https://github.com/Architect0rr/MDDPN/issues"
